feat(system): change return menu of list menu search method to new menu :sparkles: